[package]
name = "backtrace-waker"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Efficient, logical 'backtraces' of async tasks."
repository = "https://github.com/petrosagg/backtrace-waker"
categories = ["asynchronous", "development-tools::debugging"]

[dependencies]
scoped-trace = "0.1"
pin-project-lite = "0.2"
futures-channel = "0.3"
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
